# berry-punch

./: .gitignore  BerryPunch.conf  CMakeLists.txt  README.md  SHBot.sh  admin.cfg  buftail.sh  config.json  dic.py  format_log.sh  ircbot.py  lastday_bronycub.php  lastlog_bronycub.php  log_rotate.sh  open_tmux.sh  pick_links.sh  readlog.sh  say.sh  start.sh  start_bot.sh  tags  taillog.sh  zecora_bot.py
backup/: BerryPunch.conf.backup.1400859099  BerryPunch.conf.backup.1401704743  BerryPunch.conf.backup.1401705892  BerryPunch.conf.backup.1401705913  BerryPunch.conf.backup.1401709753  BerryPunch.conf.backup.1401714886  BerryPunch.conf.backup.1402257882  BerryPunchBot.conf.backup.1400793009  BerryPunchBot.conf.backup.1400832345  BerryPunchBot.conf.backup.1400839586  BerryPunchBot.conf.backup.1400844361  ignores.conf.backup.1400792641  ignores.conf.backup.1402500832  users.conf.backup.1400786728  users.conf.backup.1400837769  users.conf.backup.1401389142  users.conf.backup.1402486302
conf/: channels.conf  users.conf
config/: SHBot.cfg  admin.cfg  cmd_right.cfg  trigger.cfg
data/: ChannelStats.db  Herald.db  Seen.any.db  Seen.db  Topic.pickle
data/#bronycub/: MessageParser.db  Quote.flat.db
data/#bronycun/: MessageParser.db
data/Todo/: 1
data/web/: index.html.example
include/berrypunch/: config.h  events.h  msgtrigger.h
lib/: admin.sh  commands.sh  dico.sh  irc_utils.sh  logmsg.sh  msgtrigger.sh  start.sh
old_logs/: test
plugins/: MessageParser  Reply  Trigger
src/: main.c  msgtrigger.c
src/events/: connect.c  message.c  numeric.c
(+4 files in other folders)
